[project]
name = "HippDex"
authors = [{ name = "Arjun Singh (ansh0x)" }]
version = "0.1.0"
description = "HippDex, a hippocampal-index inspired RAG-like system for Mamba models"
requires-python = ">=3.12"
dependencies = [
  "onnxruntime>=1.24",
  "numpy>=2.4",
  "huggingface_hub>=1.7",
  "tokenizers>=3.6.2",
]

[project.optional-dependencies]
llama = ["llama_cpp_python>=0.3"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
